@@ -1,7 +1,8 @@
 7 April 2025
-  - Update libslink to v4.1.4 with support for SeedLink v4, including
-    * support for TLS (SSL) connections
+  - Update libslink to v4.1.4 with support for SeedLink v4, including:
     * support for miniSEED 2 and 3 data records
+    * support for TLS (SSL) connections
+    * support for user authentication
   - Add libmseed v3.1.3.
   - Add .clang-format and format all source code.
   - Remove -mbi option.
